<resources>
    <string name="app_name">Lab2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="fragment_start_input_type">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="fragment_start_activity_type">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Running</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>
    <string-array name="start_activity_list">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heart Rate</item>
        <item>Comment</item>
    </string-array>
    <string name="account_pref_activity">Name, Email, Class, etc.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="button_send">Save Preferences</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="image_add">Choose Image</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="school_class">Class</string>
    <string name="year">e.g. 2016</string>
    <string name="major">Major</string>
</resources>
